custom/internal-virtualservice.yaml
---
##################
# Grafana
##################
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana-internal-destination-rule
  namespace: istio-system
spec:
  host: grafana.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-internal-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-autogenerated-k8s-ingress
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-internal-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressinternalgateway
  servers:
  - port:
      number: 15031
      name: http2-grafana
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-internal-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - grafana-internal-gateway
  http:
  - match:
    - port: 15031
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
---
##################
# Jaeger
##################
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jaeger-internal-destination-rule
  namespace: istio-system
spec:
  host: tracing.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-internal-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-autogenerated-k8s-ingress
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-internal-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressinternalgateway
  servers:
  - port:
      number: 15032
      name: http2-tracing
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-internal-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - tracing-internal-gateway
  http:
  - match:
    - port: 15032
    route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
##################
# Kiali
##################
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali-internal-destination-rule
  namespace: istio-system
spec:
  host: kiali.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-internal-internal-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-autogenerated-k8s-ingress
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-internal-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressinternalgateway
  servers:
  - port:
      number: 15029
      name: http2-kiali
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-internal-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - kiali-internal-gateway
  http:
  - match:
    - port: 15029
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
##################
# Prometheus
##################
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus-internal-destination-rule
  namespace: istio-system
spec:
  host: prometheus.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-internal-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-autogenerated-k8s-ingress
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-internal-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressinternalgateway
  servers:
  - port:
      number: 15030
      name: http2-prometheus
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-internal-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - prometheus-internal-gateway
  http:
  - match:
    - port: 15030
    route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
---
##################
# Servicegraph
##################
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: servicegraph-internal-destination-rule
  namespace: istio-system
spec:
  host: servicegraph.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicegraph-internal-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-autogenerated-k8s-ingress
  http:
  - route:
    - destination:
        host: servicegraph.istio-system.svc.cluster.local
        port:
          number: 8088
